--- a/style.css
+++ b/style.css
@@ -76,23 +76,29 @@ li a:hover {
 }
 
 .mobile_nav {
-    display: none;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -23em;
     padding-left: 36px;
-    width: 300px;
+    padding-top: 5em;
+    width: 200px;
     height: 100vh;
     background-color: rgb(231, 233, 235);
     z-index: 999;
+    transition: right 0.5s;
+}
+
+.open {
+    right: 0;
 }
 
 .exit_btn i {
-    padding-left: 16em;
-    padding-top: 1.1em;
+    position: absolute;
+    top: 2.7em;
+    left: 2.3em;
 }
 
 .mobile_nav li {
@@ -109,7 +115,7 @@ li a:hover {
     justify-content: center;
     align-items: center;
     padding: 0 1em;
-    position: fixed;
+    position: absolute;
     right: 144px;
     top: 28px;
     width: 90px;
@@ -118,6 +124,10 @@ li a:hover {
     border-radius: 10px;
     cursor: pointer;
     color: var(--white-color);
+}
+
+.button_3:hover {
+    background-color: rgb(79, 79, 235);
 }
 
 /* this is the hero secton  */
