--- a/style.css
+++ b/style.css
@@ -76,9 +76,6 @@ li a:hover {
 }
 
 .mobile_nav {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
     position: fixed;
     top: 0;
     right: -23em;
@@ -115,7 +112,7 @@ li a:hover {
     justify-content: center;
     align-items: center;
     padding: 0 1em;
-    position: absolute;
+    position: fixed;
     right: 144px;
     top: 28px;
     width: 90px;
@@ -299,10 +296,11 @@ p {
     }
     .button_3 {
         display: flex;
+        position: absolute;
     }
 }
 
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 900px) {
     .logo img {
         display: flex;
         justify-content: start;
@@ -325,5 +323,73 @@ p {
 
     .left_hero_section .hero_text p {
         width: 500px;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .logo img {
+        width: 100px;
+        object-fit: contain;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    .left_hero_section .button_2 {
+        display: flex;
+        justify-content: center;
+        width: 300px;
+        margin: 0 auto;
+    }
+    .left_hero_section .hero_text p {
+        width: 350px;
+        margin: 0 auto;
+    }
+    .container_1 .box_1 {
+        width: 160px;
+        height: 80px;
+        margin-left: 1.5em;
+    }
+    .container_2 .box_3 {
+        width: 110px;
+        height: 300px;
+    }
+    .box_3 img {
+        height: 200px;
+        object-fit: cover;
+    }
+    .box_2 {
+        width: 110px;
+        height: 300px;
+        margin-right: 0.8em;
+    }
+    .box_2 img {
+        object-fit: cover;
+        width: 240px;
+    }
+    .box_4 {
+        width: 160px;
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .logo img {
+        width: 90px;
+        object-fit: contain;
+    }
+    nav {
+        padding: 0 2em;
+    }
+    .button_3 {
+        width: 70px;
+        height: 30px;
+        font-size: 0.7em;
+        margin-top: 0.5em;
+    }
+    .service_container {
+        display: flex;
+        justify-content: center;
+        gap: 2.5em;
+        font-size: 0.8em;
     }
 }
